// Autogenerated by:
// ../../src/tools/ftrace_proto_gen/ftrace_proto_gen.cc
// Do not edit.

syntax = "proto2";
package perfetto.protos;

message FwtpPerfettoCounterFtraceEvent {
  optional uint64 timestamp = 1;
  optional uint32 track_id = 2;
  optional string category = 3;
  optional string name = 4;
  optional uint32 value = 5;
}
